# Citation_Fraud_Detector

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DEPLOY.md  Dockerfile  Dockerfile.dashboard  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  deploy.yml  watchlist_cron.yml
docs/: CFD_Scientific_Paper.docx  CFD_TODO.md  CFD_Technical_Specification.docx  api.md  architecture.md  contributing.md  deployment.md  index.md  indicators.md  installation.md  usage.md
locales/: en.json  ua.json
scripts/: backup_neo4j.sh  backup_postgres.sh
sql/: create_cfd_users.sql
src/cfd/: __init__.py  exceptions.py
supabase/migrations/: 000_full_schema.sql  001_initial_schema.sql  002_stage2_schema.sql  003_stage3_schema.sql  004_stage4_views.sql  005_stage5_schema.sql  006_stage6_api_keys.sql
tests/: conftest.py  test_bugfix_audit.py  test_coverage_boost.py  test_coverage_boost2.py  test_coverage_boost3.py  test_coverage_boost4.py  test_coverage_boost5.py  test_coverage_boost6.py  test_coverage_boost7.py
tests/fixtures/: sample_batch.csv
tests/test_analysis/: test_authorship.py  test_baselines.py  test_calibration.py  test_cannibalism.py  test_coercive.py  test_context.py  test_cross_platform.py  test_discriminators.py  test_eligibility.py  test_embeddings.py  test_incremental.py  test_journal.py  test_peer_benchmark.py  test_pipeline.py  test_salami.py  test_temporal.py
tests/test_api/: conftest.py  test_app.py  test_audit.py  test_auth.py  test_authors.py  test_batch.py  test_cris.py  test_dependencies.py  test_exception_handlers.py  test_middleware.py  test_pipeline_dep.py  test_rate_limit.py  test_version.py  test_watchlist.py
tests/test_cli/: test_build_functions.py  test_compare_commands.py  test_main.py  test_report_commands.py  test_visualize_commands.py  test_watchlist_commands.py  test_watchlist_reanalyze.py
tests/test_dashboard/: test_app.py  test_pages.py
tests/test_data/: test_batch.py  test_fallback.py  test_http_client.py  test_identity_mismatch.py  test_openalex.py  test_scopus.py  test_validators.py
tests/test_db/: conftest.py  test_algorithm_versions.py  test_audit_repo.py  test_authors.py  test_baselines.py  test_cache.py  test_citations.py  test_client.py  test_cliques.py  test_communities.py  test_connections.py  test_evidence.py  test_fraud_scores.py  test_indicators.py  test_peer_groups.py  test_publications.py  test_snapshots.py  test_theorem_results.py  test_watchlist_repo.py
tests/test_export/: test_csv_export.py  test_evidence.py  test_html_export.py  test_json_export.py  test_pdf_export.py
tests/test_graph/: test_builder.py  test_centrality.py  test_cliques.py  test_community.py  test_engine.py  test_igraph_engine.py  test_indicators.py  test_metrics.py  test_mutual.py  test_scoring.py  test_theorems.py
tests/test_integration/: conftest.py  test_cli_integration.py  test_fallback_integration.py  test_full_pipeline.py
(+134 files in other folders)
