[project]
name = "citation-fraud-detector"
version = "0.8.0"
description = "Multi-level system for detecting anomalous citation patterns in scientometric databases"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "supabase>=2.0",
    "networkx>=3.2",
    "numpy>=1.26",
    "scipy>=1.11",
    "rich>=13.0",
    "tenacity>=8.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
neo4j = ["neo4j>=5.15"]
igraph = ["igraph>=0.11"]
viz = ["plotly>=5.18", "kaleido>=0.2"]
pdf = ["reportlab>=4.0"]
html = ["jinja2>=3.1"]
dashboard = ["streamlit>=1.30", "plotly>=5.18"]
neural = ["sentence-transformers>=2.2"]
api = ["fastapi>=0.109", "uvicorn[standard]>=0.27", "slowapi>=0.1.9", "python-multipart>=0.0.6"]
all = ["citation-fraud-detector[neo4j,igraph,viz,pdf,html,dashboard,neural,api]"]
docs = ["mkdocs>=1.5", "mkdocs-material>=9.0"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.scripts]
cfd = "cfd.cli.main:cli"
cfd-api = "cfd.api.app:run"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/cfd/api/**" = ["B008"]  # FastAPI Depends() in function defaults is idiomatic

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
